--- a/src/index.html
+++ b/src/index.html
@@ -12,31 +12,95 @@
   <!--
     Previous project placeholder begins
   -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
+  <nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar">Inicio</span>
+        <span class="icon-bar">Sobre mí</span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Toncy Dunlop</a>
+    </div>
+
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
   </div>
 
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
+
+  <!-- /.container-fluid -->
+  <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+      <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Who I am</h1>
+            <p>I'm a web developer with a passion for writing. </p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>What I do</h1>
+            <p>I code with excellence and I create compelling products, content and beautiful sites that your users will love.</p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>What I believe in</h1>
+            <p>Learning never stops! I'm a devoted team player who also believes passion is key to coding with love and pride and thoroughness.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
+</nav>
+<div class="marketing">
+<footer>
+<div class="container">
+<h3>¡Contáctame! Estoy disponible para hablar</h3>
+<p>Escríbeme a tldunlop@gmail.com</p>
+</div>
+</footer>
 
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
+</div>
+<div class="container"></div>
+<div class="row">
+<div class="col-md-4">
+  <span class="glyphicon glyphicon-music"><h2>HTML and CSS</h2> <p>Making code sing on your website</p></span></div>
+<div class="col-md-4">
+  <span class="glyphicon glyphicon-fire"><h2>Javascript</h2><p>Elegant, pragmatic functionalities</p></span></div>
+<div class="col-md-4">
+<span class="glyphicon glyphicon-heart"><h2>Passion and skills<h2><p>Whatever I don't kknow, I'll learn it.</p></span></div>
+</div>
 
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
